kubernetes/multipod/mongo-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
spec:
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - name: mongo-db
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service
spec:
  selector:
    app: mongo-db
  ports:
  - port: 27017
    targetPort: 27017
